# arifos

./: .AGENTS.md  .ENGINEERING_LOCK  .arifos_version_lock.yaml  .commit_msg.txt  .completion_aaa_quantum.md  .completion_quantum_integration.md  .completion_quantum_test_migration.md  .dockerignore  .env.docker.example  .env.example  .env.sovereign  .forge_tree_before.txt  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .kimi_mcp_fixed.json  .mcp.json  .opencode-mcp.json  .opencode.json  .pre-commit-config.yaml  .railway-env  .railway.toml  .secrets.baseline  .tmp_generate_readme.py  000_ENTROPY_BASELINE.md  111_THINK_REPORT.md  333_AXIOMS.md  33_MANIFEST.json  444_ASI_CANON.md  666_BRIDGE_NEURO_SYMBOLIC_IMPLEMENTATION_v46.md  999_SEAL.md  999_VAULT_SEAL.md  AAA_MCP_SYSTEM_MAP.md  AAA_MCP_VS_TRINITY_ANALYSIS.md  ACT.md  ADAPTER_BUS_CONTRACT.md  AFORGE_PHASE1_CONTROL_SPINE.md  AGENTS.md  AGENT_KERNEL_START.md  (+715 more)
00_legacy_materials/arifOS-upstream/: .gemini_access  .gitignore  .gitmodules  .mcp.json  .openclaw  .opencode.json  .pre-commit-config.yaml  ADAPTER_BUS_CONTRACT.md  AGENTS.md  CHANGELOG.md  CHATGPT_DEPLOYMENT_GUIDE.md  CONSTITUTION.md  Dockerfile  Dockerfile.fhs  F0_SOVEREIGN_FLOOR.md  FRAMEWORK_SUPPORT.md  MANIFEST.in  MCP_TEST_REPORT_2026-04-16.md  MEMORY.md  README.md  README_SOVEREIGNTY_SECTION.md  ROADMAP.md  SEALING_CHECKLIST.md  SESSION_SEAL.md  SESSION_SEAL_ZERO_LOOPHOLE_V1.md  SUBSTRATE.md  TODO.md  VAULT999_README.md  VPS_BOOTSTRAP.md  apex_dashboard_widget.py  arifOS_horizon_cli.py  arifos.init  arifos.yml  audit_data_structure.py  docker-compose.trinity.yml  docker-compose.unified.yml  docker-compose.weld004.yml  docker-compose.yml  footer_part.yml  ignition_real_test.py  (+10 more)
00_legacy_materials/arifOS-upstream/.arifos/: adam_agent.py  apex_judge.py  arif_agent.py  runtime_sessions.json  vault_seal.py
00_legacy_materials/arifOS-upstream/.claude/sessions/: seal_20260405_2111.md
00_legacy_materials/arifOS-upstream/.github/: copilot-instructions.md
00_legacy_materials/arifOS-upstream/.github/workflows/: MIGRATION_GUIDE.md  arifos-deploy-gate.yml  constitutional-eval.yml  deploy-automated.yml  deploy-vps.yml  dual-deploy-fixed.yml  dual-deploy.yml  live_tests.yml  mcp-conformance.yml  push-to-huggingface.yml  secrets-scan.yml  uptime-monitor.yml
00_legacy_materials/arifOS-upstream/000/: 000_README.md  AUTH_PROTOCOL.md  EPOCH_ARCHITECTURE_SPEC.md  HUMILITY_SPEC.md  MEMORY_LIFECYCLE.md  PLANNING_ORGAN_SPEC.md  REAL_INTELLIGENCE_KERNEL_SPEC.md  VERDICT_RECOVERY_MATRIX.md  VERDICT_SCHEMA_STANDARD.md
00_legacy_materials/arifOS-upstream/000/FLOORS/: F01_AMANAH.md  F12_INJECTION.md
00_legacy_materials/arifOS-upstream/000/ROOT/: K000_ROOT.md  K333_CODE.md
00_legacy_materials/arifOS-upstream/VAULT999/: seals
00_legacy_materials/arifOS-upstream/apps/autoresearch/: benchmark_results.json
00_legacy_materials/arifOS-upstream/archive/333/: 333_INIT.md  333_SEAL.md  ATLAS.md  (+1 more)
00_legacy_materials/arifOS-upstream/arifOS/: README.md
00_legacy_materials/arifOS-upstream/arifOS_mcp/: __init__.py
00_legacy_materials/arifOS-upstream/arifos-core/: mcp_server.py  verify_arifos_tools.py
00_legacy_materials/arifOS-upstream/core/: floors.py  governance_kernel.py  judgment.py  uncertainty_engine.py
00_legacy_materials/arifOS-upstream/deploy/: manifest_vps.yaml
00_legacy_materials/arifOS-upstream/deployments/: README.md  substrate_wrapper.py  vps-deploy.yml
00_legacy_materials/arifOS-upstream/docs/: AGENTS_MCP_SERVER_GUIDE.md  HTA_ALIGNMENT_SUMMARY.md  MIGRATION_SAFETY.md  OPENCLAW_AGENT_BOOTSTRAP.md  PLAN_MODE_888HOLD.md  PREFECT_TELEMETRY_ROADMAP.md  QUICK_START.md  REPO_STRUCTURE.md  SECRET_ROTATION.md  SUBAGENT_HANDOFF_PROTOCOL.md  WEB_SEARCH_INTEGRATION.md  ZKPC_ROADMAP.md  a2a-integration.md  fastmcp_technical_analysis.md  integration_patterns.md  mcp.html
00_legacy_materials/arifOS-upstream/geox-wealth/: docker-compose.yml
00_legacy_materials/arifOS-upstream/governor_mcp/: TOOL_MANIFEST.md
00_legacy_materials/arifOS-upstream/hooks/: pre-commit
00_legacy_materials/arifOS-upstream/interfaces/: IArifosStack.ts
00_legacy_materials/arifOS-upstream/review_operator/: cli.py
00_legacy_materials/arifOS-upstream/scripts/: check_tool_surface_drift.py  deploy_production.py  tmp_fix_resources.py  verify_wiki_sync.py  vps_deploy_verify.py
00_legacy_materials/arifOS-upstream/static/: llms.txt  robots.txt  wells.json
00_legacy_materials/arifOS-upstream/supabase/: config.toml
00_legacy_materials/arifOS-upstream/tests/: README.md  conftest.py  test_11_mega_tools_gates.py  test_caller_context_envelope.py  test_closed_loop.py  test_constitutional.py  test_constitutional_core.py  test_constitutional_heartbeat.py  test_continuity_contract.py  test_coverage_boost.py  test_coverage_focused.py  test_deploy_production.py  test_deployment_readiness.py  test_dockerfile_runtime.py  test_e2e.py  test_floors.py  test_floors_ci.py  test_formatter_nudge_routing.py  test_get_caller_status.py  test_health_mode_integration.py  test_init_unification.py  test_invariants_authority.py  test_invariants_identity.py  test_invariants_session.py  test_llm_context_map.py  test_mcp_inspector.py  test_mcp_phase0.py  test_model_soul.py  test_ollama_local_tool.py  test_phase0_fixes.py  test_phase0_standalone.py  test_protocol_e2e.py  test_public_registry.py  test_reality_dossier_coverage.py  test_reality_grounding_coverage.py  test_registry.py  test_runtime_alignment_v2.py  test_runtime_capability_map.py  test_runtime_tools_bootstrap.py  test_runtime_tools_coverage.py  (+4 more)
00_legacy_materials/arifOS-upstream/tmp/: NEXT_HORIZON_13TOOLS.md  test_fetch.py
00_legacy_materials/arifOS-upstream/tools/: notion_tool.py  sovereignty_stamp.py  token_savings_calculator.py
00_legacy_materials/arifOS-upstream/vault-service/: README.md  client.py  models.py  server.py  server.py.backup.20260418071834
00_legacy_materials/arifOS-upstream/vault999_writer/: Dockerfile  EXECUTION_REPORT.md  main.py  requirements.txt
00_legacy_materials/arifOS-upstream/wiki/: PAGE_REGISTRY.md  SCHEMA.md  index.md  log.md
(+11139 files in other folders)
