[project]
name = "arifos"
version = "2026.05.16"
description = "arifOS Constitutional AI Kernel — 13 canonical MCP tools, VAULT999 ledger, F1–F13 floor enforcement"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
keywords = [
    "ai-governance",
    "constitutional-ai",
    "mcp-server",
    "trinity-architecture",
    "agi-asi-apex",
]
authors = [{ name = "Muhammad Arif bin Fazil", email = "arifbfazil@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp==3.2.4",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sse-starlette>=3.4.3",
    "starlette>=1.0.0",
    "pydantic>=2.13.4",
    "httpx>=0.25.0",
    "asyncpg>=0.31.0",
    "qdrant-client>=1.17.0",
    "psycopg2-binary>=2.9.9",
    "httpx-sse>=0.4.3",
    "anyio>=4.13.0",
    "python-dotenv>=1.2.2",
    "prometheus-client>=0.25.0",
    "rich>=15.0.0",
    "psutil>=7.2.2",
    "numpy==2.1.3",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "torch==2.5.1",
    "transformers==4.46.3",
    "sentence-transformers==3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.12",
    "mypy>=2.1.0",
]

[project.scripts]
arifos-mcp = "arifosmcp.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["arifosmcp*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"arifosmcp/runtime/a2a/server.py" = ["N812"]
"arifosmcp/runtime/rest_routes.py" = ["E501", "F841", "N806", "I001"]
"arifosmcp/schemas/forge.py" = ["N815"]
"arifosmcp/runtime/semantic_gate.py" = ["E501"]
"arifosmcp/runtime/tools.py" = ["N802", "B007"]
"arifosmcp/schemas/semantic_gate.py" = ["E501"]
"arifosmcp/runtime/tools_internal.py" = ["UP038"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true

[tool.bandit]
skips = ["B110", "B311", "B310", "B112", "B104"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
