[project]
name = "arifos"
version = "2026.05.25"
description = "arifOS Constitutional AI Kernel — 13 canonical MCP tools, VAULT999 ledger, F1–F13 floor enforcement"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
keywords = [
    "ai-governance",
    "constitutional-ai",
    "mcp-server",
    "trinity-architecture",
    "agi-asi-apex",
]
authors = [{ name = "Muhammad Arif bin Fazil", email = "arifbfazil@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp==3.2.4",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "sse-starlette>=3.4.4",
    "starlette>=1.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "httpx>=0.25.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "qdrant-client>=1.18.0",
    "httpx-sse>=0.4.3",
    "anyio>=4.13.0",
    "python-dotenv>=1.2.2",
    "prometheus-client>=0.25.0",
    "structlog>=24.4.0",
    "rich>=15.0.0",
    "psutil>=7.2.2",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "torch==2.12.0",
    "transformers==5.8.1",
    "sentence-transformers==5.5.0",
    "google-api-python-client>=2.160.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "tavily-python>=0.5.0",
    "exa-py>=1.0.32",
    "firecrawl-py>=1.3.0",
    "google-genai>=0.1.0",
    "duckduckgo-search>=6.3.0",
    "trafilatura>=1.12.0",
    "readability-lxml>=0.8.1",
    "markdownify>=0.13.1",
    "html2text>=2024.2.26",
    "tldextract>=5.1.3",
    "bleach>=6.2.0",
    "defusedxml>=0.7.1",
    "playwright>=1.49.0",
    "cryptography>=44.0.0",
    "pynacl>=1.5.0",
    "pymupdf>=1.25.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "pillow>=11.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.120.0",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
]

[project.urls]
Homepage = "https://arifos.arif-fazil.com"
Documentation = "https://arifos.arif-fazil.com"
Repository = "https://github.com/ariffazil/arifos"
Issues = "https://github.com/ariffazil/arifos/issues"

[project.scripts]
arifos-mcp = "arifosmcp.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["arifosmcp*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "e3e: end-to-end tests (deselect with '-m not e3e')",
    "slow: slow tests (deselect with '-m not slow')",
    "integration: integration tests requiring live services",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"arifosmcp/runtime/a2a/server.py" = ["N812"]
"arifosmcp/runtime/rest_routes.py" = ["E501", "F841", "N806", "I001"]
"arifosmcp/schemas/forge.py" = ["N815"]
"arifosmcp/runtime/semantic_gate.py" = ["E501"]
"arifosmcp/runtime/tools.py" = ["N802", "B007"]
"arifosmcp/schemas/semantic_gate.py" = ["E501"]
"arifosmcp/runtime/tools_internal.py" = ["UP038"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true

[tool.bandit]
skips = ["B110", "B311", "B310", "B112", "B104"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
