[project]
name = "arifos"
version = "1!2026.06.30.post2"
description = "arifOS Constitutional AI Kernel and federation bridge — 13 canonical MCP tools, VAULT999 ledger, F1–F13 floor enforcement"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
keywords = [
    "ai-governance",
    "constitutional-ai",
    "mcp-server",
    "trinity-architecture",
    "agi-asi-apex",
]
authors = [{ name = "Muhammad Arif bin Fazil", email = "arifbfazil@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp[tasks]==3.4.2",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "sse-starlette>=3.4.4",
    "starlette>=1.3.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "httpx>=0.25.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.4",
    "qdrant-client>=1.18.0",
    "httpx-sse>=0.4.3",
    "anyio>=4.14.1",
    "python-dotenv>=1.2.2",
    "prometheus-client>=0.25.0",
    "structlog>=24.4.0",
    "rich>=15.0.0",
    "psutil>=7.2.2",
    "numpy==2.5.0",
    "scipy==1.17.1",
    "scikit-learn==1.9.0",
    "torch==2.12.1",
    "transformers==5.12.1",
    "sentence-transformers==5.6.0",
    "google-api-python-client>=2.160.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "tavily-python>=0.5.0",
    "exa-py>=2.15.0",
    "firecrawl-py>=1.3.0",
    "google-genai>=0.1.0",
    "duckduckgo-search>=8.1.1",
    "trafilatura>=1.12.0",
    "readability-lxml>=0.8.4.1",
    "markdownify>=0.13.1",
    "html2text>=2024.2.26",
    "tldextract>=5.3.1",
    "bleach>=6.4.0",
    "defusedxml>=0.7.1",
    "playwright>=1.60.0",
    "cryptography>=49.0.0",
    "pynacl>=1.6.2",
    "blake3>=1.0.9",
    "pymupdf>=1.25.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "pillow>=11.0.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pydantic-ai>=1.94.0",
    "langgraph>=1.2.6",
    "duckdb>=1.5.4",
    "polars>=1.41.2",
    "pandera>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.155.7",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
]
openai = [
    # OpenAI Agents SDK — required for arifos.adapters.openai
    # Pin major version; OpenAI ships breaking changes across majors.
    "openai>=1.60.0",
]
anthropic = [
    # Anthropic Agent SDK — for arifos.adapters.anthropic (future)
    "anthropic>=0.40.0",
]
geox = [
    "lasio>=0.32",
    "welly>=0.5.2",
    "striplog>=0.9.2",
    "segyio>=1.9.14",
    "statsmodels>=0.14.6",
    "setuptools<70",
]
wealth = [
    "supabase>=2.31.0",
    "numpy-financial>=1.0.0",
    "psycopg[binary]>=3.3.4",
]
federation = [
    "lasio>=0.32",
    "welly>=0.5.2",
    "striplog>=0.9.2",
    "segyio>=1.9.14",
    "statsmodels>=0.14.6",
    "setuptools<70",
    "supabase>=2.31.0",
    "numpy-financial>=1.0.0",
    "psycopg[binary]>=3.3.4",
]

[project.urls]
Homepage = "https://arifos.arif-fazil.com"
Documentation = "https://arifos.arif-fazil.com"
Repository = "https://github.com/ariffazil/arifos"
Issues = "https://github.com/ariffazil/arifos/issues"

[project.scripts]
arifos = "arifosmcp.server:main"
arifos-mcp = "arifosmcp.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["arifosmcp*", "core*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "e3e: end-to-end tests (deselect with '-m not e3e')",
    "slow: slow tests (deselect with '-m not slow')",
    "integration: integration tests requiring live services",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"arifosmcp/runtime/a2a/server.py" = ["N812"]
"arifosmcp/runtime/rest_routes.py" = ["E501", "F841", "N806", "I001"]
"arifosmcp/schemas/forge.py" = ["N815"]
"arifosmcp/runtime/semantic_gate.py" = ["E501"]
"arifosmcp/runtime/tools.py" = ["N802", "B007"]
"arifosmcp/schemas/semantic_gate.py" = ["E501"]
"arifosmcp/runtime/tools_internal.py" = ["UP038"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true

[tool.bandit]
skips = ["B110", "B311", "B310", "B112", "B104"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
]
