[project]
name = "arifos"
version = "2026.04.17"
description = "arifOS v2.0 — Constitutional AGI Operating System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Arif Fazil", email = "arif@arif-fazil.com"}
]

dependencies = [
    "fastmcp==3.2.0",
    "prefab-ui==0.18.2",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "starlette>=0.30.0",
    "itsdangerous>=2.0.0",
    "openapi-pydantic>=0.5.1",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.8.2",
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "rich>=15.0.0",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.17.1",
    "ddgs>=9.5.4",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "redis>=7.4.0",
    "cryptography>=42.0.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "python-lsp-server>=1.11.0",
    "py-key-value-aio[redis]>=0.4.0",
    "psycopg2-binary>=2.9.0",
    "aiofiles>=23.2.1",
    "blake3>=1.0.0",
    "supabase>=2.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["arifosmcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
